// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FaucetTransactionsController GET /faucet_transactions/next with a missing api key returns a 401 1`] = `
{
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`FaucetTransactionsController POST /faucet_transactions with DISABLE_FAUCET set returns a 403 1`] = `
{
  "message": "The faucet has been disabled, try joining a mining pool!",
  "status": 403,
}
`;

exports[`FaucetTransactionsController POST /faucet_transactions with empty arguments returns a 422 1`] = `
{
  "error": "Unprocessable Entity",
  "message": [
    "email must be an email",
    "public_key should not be empty",
  ],
  "statusCode": 422,
}
`;

exports[`FaucetTransactionsController POST /faucet_transactions with missing arguments returns a 422 1`] = `
{
  "error": "Unprocessable Entity",
  "message": [
    "public_key must be a string",
    "public_key should not be empty",
  ],
  "statusCode": 422,
}
`;

exports[`FaucetTransactionsController POST /faucet_transactions/:id/complete with a missing api key returns a 401 1`] = `
{
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`FaucetTransactionsController POST /faucet_transactions/:id/start with a missing api key returns a 401 1`] = `
{
  "message": "Unauthorized",
  "statusCode": 401,
}
`;
